# hebi

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  cargo  design.md  grammar.ebnf  justfile  todo.md  v2.md
cli/: Cargo.toml
cli/src/: main.rs  repl.rs
cli/src/lib/: commands.rs  common.rs  hebi.rs  lib.rs  repl.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  repl.rs
crates/derive/: Cargo.toml  README.md
crates/derive/src/: builtin.rs  class.rs  delegate.rs  function.rs  lib.rs  util.rs
crates/diag/: Cargo.toml  README.md
crates/diag/src/: lib.rs  report.rs  snippet.rs  source.rs  style.rs  util.rs
crates/diag/src/report/: tests.rs
crates/emit/: Cargo.toml  calls.md
crates/emit/src/: ctx.rs  emitter.rs  error.rs  lib.rs  regalloc.rs
crates/emit/src/emitter/: tests.rs
crates/emit/src/snapshots/: mu_emit__regalloc__tests__reg_alloc_1-2.snap  mu_emit__regalloc__tests__reg_alloc_1-3.snap  mu_emit__regalloc__tests__reg_alloc_2-2.snap
crates/op/: Cargo.toml  design.md
crates/op/src/: builder.rs  chunk.rs  disassembly.rs  dispatch.rs  handler.rs  instruction.rs  lib.rs  macros.rs  opcode.rs  tests.rs  u24.rs
crates/op/src/instruction/: macros.rs  ty.rs
crates/op/src/snapshots/: mu_op__tests__builder.snap  mu_op__tests__dispatch-2.snap  mu_op__tests__dispatch.snap
crates/op_macros/: Cargo.toml
crates/op_macros/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: isolate.rs  lib.rs
crates/runtime/src/isolate/: binop.rs  call.rs  class.rs  cmp.rs  error.rs  field.rs  index.rs  string.rs  truth.rs
crates/runtime/src/value/: constant.rs  lib.rs  mod.rs  object.rs  ptr.rs
crates/runtime/tests/: class_def.rs  class_inheritance.rs  fn_call.rs  fn_call_closure.rs  fn_call_default.rs  fn_call_kw.rs  literals.rs  object_load_field.rs  object_load_index.rs  precedence.rs  simple.rs
crates/runtime/tests/common/: common.rs
crates/runtime/tests/snapshots/: assignment__assign.snap  assignment__rem_assign.snap  branch__simple_if.snap  class_def__class_def_with_field.snap  class_def__class_def_with_init.snap  class_def__empty_class_def.snap  class_def__empty_class_def_with_super.snap  class_inheritance__class_inheritance_nested.snap  class_methods__class_call_init.snap  class_methods__method_call.snap  class_methods__method_receiver_resolution.snap  fn_call__func.snap  fn_call__func_not_enough_args.snap  fn_call__func_with_argv.snap  fn_call__func_with_pos.snap  fn_call_closure__counter.snap  fn_call_default__default_pos.snap  fn_call_default__default_pos_too_many_args.snap  fn_call_default__pos_and_default_and_argv.snap  fn_call_default__pos_and_default_pos.snap  fn_call_default__pos_and_default_pos_not_enough_args.snap  fn_call_default__pos_and_default_pos_too_many_args.snap  fn_call_kw__kw.snap  fn_call_kw__kw_missing.snap  fn_call_kw__kw_missing2.snap  fn_call_kw__kw_missing_with_kwargs.snap  fn_call_kw__kw_order_independence.snap  fn_call_kw__kw_unrecognized_and_missing.snap  fn_call_kw__kw_with_default.snap  fn_call_kw__kw_with_default_and_kawrgs.snap  fn_call_kw__kw_with_kwargs.snap  literals__dict.snap  literals__dict_expr_keys.snap  literals__false.snap  literals__float.snap  literals__float_exp.snap  literals__none.snap  loops__for_print_nothing.snap  loops__print_0_to_9.snap  loops__while_print_0_to_9.snap  (+21 more)
crates/span/: Cargo.toml  README.md
crates/span/src/: lib.rs
crates/syntax/: Cargo.toml  README.md
crates/syntax/src/: ast.rs  grammar.rs  lexer.rs  lexer2.rs  lib.rs  parser.rs  parser2.rs
crates/syntax/src/grammar/: tests.rs
crates/syntax/src/lexer/: tests.rs
crates/syntax/src/parser/: common.rs  expr.rs  macros.rs  module.rs  state.rs  stmt.rs  tests.rs
crates/syntax/src/parser2/: indent.rs  tests.rs
crates/vm/: Cargo.toml
crates/vm/src/: binop.rs  call.rs  class.rs  cmp.rs  error.rs  field.rs  lib.rs  tests.rs  truth.rs  util.rs
crates/vm/src/snapshots/: mu_vm__tests__assignment-2.snap  mu_vm__tests__assignment-3.snap  mu_vm__tests__assignment-4.snap  mu_vm__tests__assignment-5.snap  mu_vm__tests__assignment-6.snap  mu_vm__tests__assignment-7.snap  mu_vm__tests__assignment-8.snap  mu_vm__tests__assignment-9.snap  mu_vm__tests__assignment.snap  mu_vm__tests__branch.snap  mu_vm__tests__call_closure-2.snap  mu_vm__tests__call_closure-3.snap  mu_vm__tests__call_closure.snap  mu_vm__tests__class_def-2.snap  mu_vm__tests__class_def-3.snap  mu_vm__tests__class_def-4.snap  mu_vm__tests__class_def.snap  mu_vm__tests__class_inheritance.snap  mu_vm__tests__class_methods-2.snap  mu_vm__tests__class_methods-3.snap  mu_vm__tests__class_methods-4.snap  mu_vm__tests__class_methods.snap  mu_vm__tests__fn_call-2.snap  mu_vm__tests__fn_call-3.snap  mu_vm__tests__fn_call-4.snap  mu_vm__tests__fn_call.snap  mu_vm__tests__fn_call_default-2.snap  mu_vm__tests__fn_call_default-3.snap  mu_vm__tests__fn_call_default-4.snap  mu_vm__tests__fn_call_default-5.snap  mu_vm__tests__fn_call_default-6.snap  mu_vm__tests__fn_call_default.snap  mu_vm__tests__fn_call_kw-2.snap  mu_vm__tests__fn_call_kw-3.snap  mu_vm__tests__fn_call_kw-4.snap  mu_vm__tests__fn_call_kw-5.snap  mu_vm__tests__fn_call_kw-6.snap  mu_vm__tests__fn_call_kw-7.snap  mu_vm__tests__fn_call_kw-8.snap  mu_vm__tests__fn_call_kw-9.snap  (+56 more)
crates/vm/tests/: assignment.rs  branch.rs  class_methods.rs  fn_call_closure.rs  loops.rs  object_load_named.rs
crates/vm/tests/common/: common.rs
crates/vm/tests/snapshots/: assignment__add_assign.snap  assignment__div_assign.snap  assignment__mul_assign.snap  assignment__opt_assign_none.snap  assignment__opt_assign_some.snap  assignment__pow_assign.snap  assignment__sub_assign.snap  class_def__class_def_with_init.snap  fn_call__func.snap  (+64 more)
ex/tvm/: Cargo.toml  design.md
ex/tvm/src/: ast.rs  error.rs  lex.rs  lib.rs  syn.rs  util.rs
ex/vm3/: Cargo.toml  build.rs
ex/vm3/benches/: main.rs
ex/vm3/src/: ast.rs  ds.rs  error.rs  gc.rs  lex.rs  lib.rs  obj.rs  op.rs  syn.rs  util.rs  val.rs  vm.rs
ex/vm3/tests/: emit.rs  lex.rs  parse.rs  vm.rs
samples/simple/: Cargo.toml
samples/simple/src/: main.rs
(+1785 files in other folders)
