[package]
name = "hebi"
version = "0.3.1"
edition = "2021"
description = "A dynamic scripting language"
repository = "https://github.com/jprochazk/hebi"
authors = ["jprochazk"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
beef = "0.5.2"
indexmap = "1.9.3"
logos = "0.12.1"
stacker = "0.1.15"

[dev-dependencies]
indoc = "2.0.1"
insta = "1.29.0"

[profile.dev.package.insta]
opt-level = 3
