[package]
name = "hebi"
version = "0.3.1"
edition = "2021"
description = "A dynamic scripting language"
repository = "https://github.com/jprochazk/hebi"
authors = ["jprochazk"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
# TODO: fix --no-default-features
default = ["nanbox", "__check_recursion_limit", "__assert_snapshots"]

# public features
nanbox = []

# private features
__check_recursion_limit = []
__assert_snapshots = []

# feature set used instead of `default` when running tests under miri
__miri = ["nanbox"]


[dependencies]
beef = "0.5.2"
futures-util = "0.3.28"
indexmap = "1.9.3"
logos = "0.13.0"
paste = "1.0.12"
stacker = "0.1.15"

[dev-dependencies]
indoc = "2.0.1"
insta = "1.29.0"
criterion = "0.4"
tokio = { version = "1.28.1", features = ["macros", "rt", "time"] }
reqwest = "0.11.18"

[profile.dev.package]
insta = { opt-level = 3 }
indoc = { opt-level = 3 }

[profile.test.package]
insta = { opt-level = 3 }
indoc = { opt-level = 3 }

[[bench]]
name = "startup"
harness = false
