[package]
name = "hebi"
version = "0.4.0"
edition = "2021"
description = "A dynamic scripting language"
repository = "https://github.com/jprochazk/hebi"
authors = ["jprochazk"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = [
  "nanbox",
  "__check_recursion_limit",
  "__assert_snapshots",
  "__disable_verbose_logs",
]

# public features
nanbox = []

# private features
__check_recursion_limit = []
__assert_snapshots = []
__disable_verbose_logs = []


[dependencies]
beef = "0.5.2"
indexmap = "1.9.3"
logos = "0.13.0"
paste = "1.0.12"
stacker = "0.1.15"
futures-util = "0.3.28"
serde = { version = "1.0.163", optional = true }
pollster = { version = "0.3.0", features = ["macro"] }

[dev-dependencies]
indoc = "2.0.1"
insta = "1.29.0"
criterion = "0.4"
tokio = { version = "1.28.1", features = [
  "macros",
  "rt",
  "time",
  "rt-multi-thread",
] }
reqwest = "0.11.18"
tokio-util = { version = "0.7.8", features = ["rt"] }
flume = "0.10.14"
serde_json = "1.0.96"

[profile.dev.package]
insta = { opt-level = 3 }
indoc = { opt-level = 3 }

[profile.test.package]
insta = { opt-level = 3 }
indoc = { opt-level = 3 }


[workspace]
members = ["cli", "xtask", "ex/vm3"]


[[bench]]
name = "main"
harness = false


[profile.release]
lto = "fat"
