[package]
name = "cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hebi = { version = "0.2.0", path = ".." }

rustyline = { version = "10.1.0" }
rustyline-derive = { version = "0.7.0" }
anyhow = { version = "1.0.69" }
clap = { version = "4.1.4", features = ["derive"] }
