[package]
name = "hebi-cli"
version = "0.0.0"
edition = "2021"
publish = false


[[bin]]
path = "src/main.rs"
name = "hebi"

[lib]
path = "src/lib/lib.rs"
name = "hebi_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
atty = "0.2.14"
clap = { version = "4.3.11", features = ["derive"] }
crossterm = "0.26.1"
hebi = { path = "../" }
supports-color = "2.0.0"
