[package]
name = "hebi_derive"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/jprochazk/hebi"
authors = ["jprochazk"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = { version = "1.0" }
syn = { version = "1.0", features = ["full", "extra-traits"] }
