[package]
name = "hebi_derive"
version = "0.2.0"
edition = "2021"
description = "Derive macros for Hebi"
repository = "https://github.com/jprochazk/hebi"
authors = ["jprochazk"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = { version = "1.0" }
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro-crate = { version = "1.3.1" }
