[package]
name = "mu_diag"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "3.5.0"
thiserror = "1.0.37"

span = { path = "../span", package = "mu_span" }

[dev-dependencies]
insta = "1.21.0"
