[package]
name = "mu_diag"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jprochazk/mu"
authors = ["jprochazk"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "3.5.0"
thiserror = "1.0.37"
beef = "0.5.2"

span = { path = "../span", package = "mu_span" }

[dev-dependencies]
insta = "1.21.0"
