[package]
name = "hebi_diag"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/jprochazk/hebi"
authors = ["jprochazk"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = { version = "3.5.0" }
thiserror = { version = "1.0.37" }
beef = { version = "0.5.2" }

span = { version = "^0.0.1", path = "../span", package = "hebi_span" }

[dev-dependencies]
insta = "1.21.0"
