[package]
name = "mu_op"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["disassembly"]
disassembly = []

[dependencies]
beef = "0.5.2"
paste = "1.0.11"

[dev-dependencies]
indoc = "1.0.8"
insta = "1.23.0"
