[package]
name = "mu_runtime"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
portable = []

[dependencies]
beef = "0.5.2"
op = { path = "../op", package = "mu_op" }
diag = { path = "../diag", package = "mu_diag" }
span = { path = "../span", package = "mu_span" }
indexmap = "1.9.2"
paste = "1.0.11"

[dev-dependencies]
indoc = "1.0.8"
insta = "1.23.0"
syntax = { path = "../syntax", package = "mu_syntax" }
emit = { path = "../emit", package = "mu_emit" }
