[package]
name = "mu_span"
description = "Span type representing code location in Mu language"
repository = "https://github.com/jprochazk/mu"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
