[package]
name = "mu_span"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jprochazk/mu"
authors = ["jprochazk"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
