[package]
name = "hebi_span"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/jprochazk/hebi"
authors = ["jprochazk"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
