[package]
name = "hebi_syntax"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jprochazk/hebi"
authors = ["jprochazk"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["check-recursion-limit"]
check-recursion-limit = []

[dependencies]
beef = "0.5.2"
logos = "0.12.1"

span = { path = "../span", package = "hebi_span" }
diag = { path = "../diag", package = "hebi_diag" }
stacker = "0.1.15"

[dev-dependencies]
indoc = "1.0.8"
insta = "1.23.0"
