[package]
name = "hebi_syntax"
version = "0.2.0"
edition = "2021"
description = "Syntax for Hebi"
repository = "https://github.com/jprochazk/hebi"
authors = ["jprochazk"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["check_recursion_limit"]
check_recursion_limit = []

[dependencies]
beef = { version = "0.5.2" }
logos = { version = "0.12.1" }

span = { version = "^0.0.1", path = "../span", package = "hebi_span" }
diag = { version = "0.2.0", path = "../diag", package = "hebi_diag" }
stacker = { version = "0.1.15" }

[dev-dependencies]
indoc = { version = "1.0.8" }
insta = { version = "1.23.0" }
