[package]
name = "simple"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["check_recursion_limit"]
portable = ["hebi/portable"]
check_recursion_limit = ["hebi/check_recursion_limit"]

[dependencies]
hebi = { version = "0.2.0", path = "../..", default-features = false }
