[package]
name = "simple"
version = "0.3.0"
edition = "2021"
private = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["check_recursion_limit"]
portable = ["hebi/portable"]
check_recursion_limit = ["hebi/check_recursion_limit"]

[dependencies]
hebi = { version = "0.3.0", path = "../..", default-features = false }
